--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "singleQuote": false,
-    "bracketSpacing": true,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "semi": true
+  "singleQuote": false,
+  "bracketSpacing": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "semi": true,
+  "insertFinalNewline": true
 }
