Authentication endpoints added (#4)
* Add login and register endpoints

* Add sql query

* Fix date format

* Manage jwt, cookies and logout

* queries, sql separated from controller

* Access token regeneration added

* Changed to email based authentication

---------

Co-authored-by: Saptak Manna <saptakmanna100@gmail.com>

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,14 @@
 PORT
 CORS_ORIGIN
-DB_URL
+
+DATABASE_URL
 PG_USER
 PG_HOST
 PG_DATABASE
 PG_PASSWORD
 PG_PORT
+
+ACCESS_TOKEN_SECRET
+ACCESS_TOKEN_EXPIRY
+REFRESH_TOKEN_SECRET
+REFRESH_TOKEN_EXPIRY
