--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
