--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,9 @@ ACCESS_TOKEN_SECRET
 ACCESS_TOKEN_EXPIRY
 REFRESH_TOKEN_SECRET
 REFRESH_TOKEN_EXPIRY
+
+
+CLOUDINARY_CLOUD_NAME
+CLOUDINARY_API_KEY
+CLOUDINARY_API_SECRET
+CLOUDINARY_URL
