--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "jest"
   },
   "author": "Group 3",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/node": "^7.25.7",
+    "@babel/preset-env": "^7.25.8",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
+    "@types/jest": "^29.5.13",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
