--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Group 3",
   "license": "ISC",
   "devDependencies": {
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "otplib": "^12.0.1",
     "prettier": "^3.3.3"
   },
   "dependencies": {
