status codes and error message updates

--- a/.env.sample
+++ b/.env.sample
@@ -18,3 +18,8 @@ CLOUDINARY_CLOUD_NAME
 CLOUDINARY_API_KEY
 CLOUDINARY_API_SECRET
 CLOUDINARY_URL
+
+GMAIL_ACCOUNT
+GMAIL_APP_PASSWORD
+
+OTP_SECRET
