--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "author": "Group 3",
   "license": "ISC",
   "devDependencies": {
-    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "otplib": "^12.0.1",
     "prettier": "^3.3.3"
   },
   "dependencies": {
@@ -20,10 +18,12 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
+    "otplib": "^12.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15"
   }
 }
