--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Default ignored files
+/.idea/shelf/
+.idea/workspace.xml
+# Editor-based HTTP Client requests
+/.idea/httpRequests/
