--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,9 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+# Lock files
+package-lock.json
+
 # Default ignored files
 /.idea/shelf/
 .idea/workspace.xml
