--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.7",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "prisma": "^6.3.1"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
+    "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
-    "otplib": "^12.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "otplib": "^12.0.1"
   }
 }
