--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
+    "@sentry/node": "^8.54.0",
     "bcrypt": "^5.1.1",
+    "chalk": "^5.4.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
-    "otplib": "^12.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "otplib": "^12.0.1",
+    "winston": "^3.17.0"
   }
 }
